@@ -1,5 +1,8 @@
 2006-12-12  Scott James Remnant  <scott@netsplit.com>
 
+	* init/tests/test_process.c: Port to the new test framework.
+	* init/init.supp: Suppress the list head allocated within job_init.
+
 	* init/init.supp: Include a valgrind suppressions file.
 	* init/Makefile.am (EXTRA_DIST): Distribute the suppressions file.
 
